# dnsutils

./: README.md  mxlookup.py  pyproject.toml  recordslookup.py  txtlookup.py
dnslookup/: README.md  dnslookup.py
src/dnsutils/: __init__.py  dnslookup.py
