[project]
name = "dnsutils"
version = "0.1.0"
description = "Utilities for retrieving DNS records or working with the DNS protocol"
readme = "README.md"
authors = [
    { name = "ak9999", email = "abdullah@ajkhan.me" }
]
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.6.1",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
dev = [
    "build",
]

[project.scripts]
dnsutils = "dnsutils:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
